# biome

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  TASK.md  cloudbuild.yaml  docker-compose.yml  progress.txt  run.sh
.github/workflows/: ci.yml  gemini-dispatch.yml  (+4 more)
backend/: .coverage  Dockerfile  README.md  TESTING.md  check_models.py  dev.sh  diagnose_db.py  main.py  models.py  profile_store.py  pyproject.toml  sample_requests.json
backend/agent/: core.py
backend/analytics/: db.py  schema.sql
backend/app/agents/: ORCHESTRATION.md  __init__.py  analyst.py  coach.py  config.py  llm_provider.py  memory.py  models.py  monitoring.py  orchestrator.py  providers.py  runner_utils.py  schemas.py  validator.py
backend/app/agents/tools/: __init__.py  definitions.py
backend/bio/: __init__.py  store.py
backend/memory/: store.py
backend/routers/: agent.py  data.py  memory.py  metrics.py  plan.py  profile.py
backend/tests/: conftest.py  test_agent.py  test_analytics.py  test_coach_persona.py  test_main.py  test_memory.py  test_router_agent.py  test_router_data.py  test_router_memory.py  test_router_plan.py  test_router_profile.py  test_weight.py
backend/user_profile/: __init__.py  store.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
context/: overview.md  resources.md  rules.md
contracts/: metrics.md  openapi.yaml
docs/: ralph_loop.md
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
infra/: BUILD_INSTRUCTIONS.md
scripts/: ralph-hitl.sh  ralph-loop.sh
(+31 files in other folders)
