[project]
name = "biome-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.3",
    "fastapi>=0.128.0",
    "google-cloud-firestore>=2.23.0",
    "google-generativeai>=0.8.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.9",
    "uvicorn>=0.40.0",
    "google-adk>=0.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.1.0",
]
